# 06-io-tyvan266

./: .gitpod.Dockerfile  README.md  cabal.project  io.cabal
src/: IO.hs
test/: IOSpec.hs  Spec.hs
