cabal-version:         3.4
name:                  io
version:               0.1
build-type:            Simple
extra-source-files:    README.md

common common
  build-depends:       base ^>= 4.16.4.0
  ghc-options:         -Wall
  default-language:    Haskell2010

library
  import:              common
  hs-source-dirs:      src
  exposed-modules:     IO
  build-depends:       bytestring
                     , containers
                     , dns 
                     , iproute
                     , network-simple
                     , random

test-suite io-tests
  import:              common
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  other-modules:       IOSpec
  build-depends:       async
                     , containers
                     , hspec
                     , io
                     , process
                     , QuickCheck
                     , statistics
                     , time
  build-tool-depends:  hspec-discover:hspec-discover

test-suite io-doctests
  import:              common
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:       base
                     , doctest 
                     , template-haskell
  ghc-options:         -threaded
  hs-source-dirs:      doctest

executable readLnMaybe
  import:              common
  hs-source-dirs:      app
  main-is:             readLnMaybe.hs
  build-depends:       io

executable sumTwo
  import:              common
  hs-source-dirs:      app
  main-is:             sumTwo.hs
  build-depends:       io

executable sumMany1
  import:              common
  hs-source-dirs:      app
  main-is:             sumMany1.hs
  build-depends:       io

executable sumMany2
  import:              common
  hs-source-dirs:      app
  main-is:             sumMany2.hs
  build-depends:       io
